--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,17 @@
+== update version 15.0.0 ==
+
+  * Total refactoring of the codebase, dropped the ruby dependency and now we
+    are also using fure bash and go tooling
+
 == update version 14.9.2 ==
 
-  * Added go_nostrip macro to disable stripping of debug
-    information and to disable a debug package
+  * Added go_nostrip macro to disable stripping of debug information and to
+    disable a debug package
 
 == update version 14.9.1 ==
 
-  * simplify rpmsysinfo.rb: don't guess variables'
-    values can be passed in by RPM environment
-    variables. use RbConfig to get libdir.
+  * simplify rpmsysinfo.rb: don't guess variables' values can be passed in by
+    RPM environment variables. use RbConfig to get libdir.
   * support s390x architecture
 
 == update version 14.9.0 ==
@@ -18,21 +22,17 @@
 
   * bugfix release
   * fix a typo in cli.rb
-  * increase timeout to 300s, or go install can't
-    finish itself sometimes
+  * increase timeout to 300s, or go install can't finish itself sometimes
 
 == update version 14.8 ==
 
   * rpmsysinfo.rb: fix encoding problem in open()
-  * cli.rb: ruby 1.8.7 doesn't support passing environment
-    variables in open(), some commands/tests need time to
-    finish, an immediate io.close() will get us wrong
-    exitstatus (broken pipe, code 13). so use 'timeout'
-    module with a 30s and process.wait for them to quit
-    successfully
-  * golang.req: the oniguruma in ruby 1.8.7 doesn't support
-    named group in regexp. so ditch the named group used in
-    go_get_version()
+  * cli.rb: ruby 1.8.7 doesn't support passing environment variables in open(),
+    some commands/tests need time to finish, an immediate io.close() will get us
+    wrong exitstatus (broken pipe, code 13). so use 'timeout' module with a 30s
+    and process.wait for them to quit successfully
+  * golang.req: the oniguruma in ruby 1.8.7 doesn't support named group in
+    regexp. so ditch the named group used in go_get_version()
 
 == update version 14.7 ==
 
@@ -67,16 +67,15 @@
 
   * if importpath has "test/example", it should survive (github#5)
   * merge macros.go from openSUSE's go here
-  * add golang-macros.rb, replacement for the complicated
-    macros in shell in macros.go
+  * add golang-macros.rb, replacement for the complicated macros in shell in
+    macros.go
   * golang-macros.rb:
     + support build with fake build id
     + support build with custom tags (github#7)
-    + support pass any -<arg>="a b c" or -<arg>=<value>
-      to go install, shared build is possible now
-      (not fully support, other macros need to be adapted)
-    + --filelist, to generate filelist used in %files
-      section with excluding support
+    + support pass any -<arg>="a b c" or -<arg>=<value> to go install, shared
+      build is possible now (not fully support, other macros need to be adapted)
+    + --filelist, to generate filelist used in %files section with excluding
+      support
     + use IO.popen to break the build at the exact place
       it fails (github#6)
 
@@ -86,12 +85,15 @@
   * fix regex not to check files like .golden in -source
   * filter "test/example" from Provides
   * split common stuff to a module golang/rpmsysinfo.rb
-  * rewrite golang.req, now read from stdin RPM feeds, and check __.PKGDEF from .a files for "import"s. (github#3 github#4）
+  * rewrite golang.req, now read from stdin RPM feeds, and check __.PKGDEF from
+    .a files for "import"s. (github#3 github#4）
 
 == update version 12 ==
 
-  * rewrite golang.prov. it should take filelist feeded by rpm in case not to add provides for source/debuginfo/debugsource sub-packages
-  * simply golang.req: own is actually importpath, no need to call golang.prov again
+  * rewrite golang.prov. it should take filelist feeded by rpm in case not to
+    add provides for source/debuginfo/debugsource sub-packages
+  * simply golang.req: own is actually importpath, no need to call golang.prov
+    again
 
 == update version 11 ==
 
@@ -118,28 +120,29 @@
   * fix golang.req to not treat a sentence as importpath
   * fix golang.attr to correctly detect /usr/bin/*
 
-== Version 5 ==
+== update version 5 ==
 
-  * if a sub-directory doesn't contain any *.go file, do not
-    treat it as a Provides candidate.
-  * add /usr/bin to golang.attr for go executes to be handled
-    by golang-packaging
+  * if a sub-directory doesn't contain any *.go file, do not treat it as a
+    Provides candidate.
+  * add /usr/bin to golang.attr for go executes to be handled by
+    golang-packaging
 
-== Version 4 ==
+== update version 4 ==
 
   * fix encoding error in golang-strip-builddep
   * add macros.go-extra, extra golang macros for packaging
 
-== Version 3 ==
+== update version 3 ==
 
   * skip *example*.go/*test*.go for Requires finding
   * support alias format (import xx "xxx") for importpath
-  * add golang-strip-builddep, a tool to strip unneeded importpath from source codes
+  * add golang-strip-builddep, a tool to strip unneeded importpath from source
+    codes
 
-== Version 2 ==
+== update version 2 ==
 
   * fix pkgname detection
 
-== Version 1 ==
+== update version 1 ==
 
   * implement Requires/Provides
