--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== update version 15.0.1 ==
+
+  * Fix crash when running build or test with no argument
+
 == update version 15.0.0 ==
 
   * Total refactoring of the codebase, dropped the ruby dependency and now we
