rewrite in golang

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== update version 16.0.0 ==
+
+  * rewrite with golang itself
+
 == update version 15.0.8 ==
 
   * Fix the handling of quoted extra args to the gobuild and gotest macros.
